Fix polymorph spell errors